2014-02-19  Dan Bernstein  <mitz@apple.com>

        Simplify PLATFORM(MAC) && !PLATFORM(IOS) and similar expressions
        https://bugs.webkit.org/show_bug.cgi?id=129029

        Reviewed by Mark Rowe.

        * accessibility/AccessibilityRenderObject.cpp:
        (WebCore::AccessibilityRenderObject::boundsForVisiblePositionRange):
        (WebCore::AccessibilityRenderObject::visiblePositionForPoint):
        * config.h:
        * editing/Editor.cpp:
        (WebCore::Editor::copyURL):
        * editing/EditorCommand.cpp:
        (WebCore::createCommandMap):
        * editing/TypingCommand.cpp:
        (WebCore::TypingCommand::markMisspellingsAfterTyping):
        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::loadArchive):
        * page/AlternativeTextClient.h:
        * page/EventHandler.cpp:
        * page/PageGroup.cpp:
        (WebCore::PageGroup::captionPreferences):
        * page/scrolling/ScrollingStateScrollingNode.cpp:
        (WebCore::ScrollingStateScrollingNode::ScrollingStateScrollingNode):
        * page/scrolling/ScrollingStateScrollingNode.h:
        * page/scrolling/ScrollingTree.h:
        * page/scrolling/ThreadedScrollingTree.cpp:
        * page/scrolling/ThreadedScrollingTree.h:
        * platform/DragData.h:
        * platform/FileSystem.cpp:
        * platform/MemoryPressureHandler.cpp:
        * platform/Pasteboard.h:
        * platform/PlatformMouseEvent.h:
        (WebCore::PlatformMouseEvent::PlatformMouseEvent):
        * platform/PlatformPasteboard.h:
        * platform/PlatformScreen.h:
        * platform/Scrollbar.cpp:
        (WebCore::Scrollbar::supportsUpdateOnSecondaryThread):
        * platform/SuddenTermination.h:
        * platform/ThreadGlobalData.cpp:
        (WebCore::ThreadGlobalData::ThreadGlobalData):
        (WebCore::ThreadGlobalData::destroy):
        * platform/ThreadGlobalData.h:
        * platform/audio/mac/AudioDestinationMac.cpp:
        * platform/audio/mac/AudioFileReaderMac.cpp: