@@ -1,3 +1,15 @@
+2014-02-19  Zan Dobersek  <zdobersek@igalia.com>
+
+        Replace WTF::bind() uses in RTCPeerConnection with C++11 lambdas
+        https://bugs.webkit.org/show_bug.cgi?id=129001
+
+        Reviewed by Eric Carlson.
+
+        * Modules/mediastream/RTCPeerConnection.cpp:
+        (WebCore::RTCPeerConnection::setLocalDescription): Pass a lambda function to
+        callOnMainThread() instead of using WTF::bind().
+        (WebCore::RTCPeerConnection::setRemoteDescription): Ditto.
+
 2014-02-19  Dan Bernstein  <mitz@apple.com>
 
         Simplify PLATFORM(MAC) && !PLATFORM(IOS) and similar expressions
